--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "firebase-admin": "^13.1.0",
     "mongoose": "^8.10.0"
   }
 }
