--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "firebase": "^11.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-phone-number-input": "^3.4.11",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.4"
